# buscaimoveis-scraper

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  scrapinghub.yml  scrapy.cfg  setup.py
buscaimoveis/: items.py  middlewares.py  pipelines.py  settings.py
buscaimoveis/spiders/: olx.py
contrib/: env-sample
