[tool.poetry]
name = "buscaimoveis-scraper"
version = "0.1.0"
description = "Projeto que coleta anúncios de imóveis a venda em grandes plataformas como OLX, Zap Imóveis, etc"
authors = ["Gilson Filho <me@gilsondev.in>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"
pymongo = "^3.12.1"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
